GNOME Bugzilla – Bug 615028
gdk/x11/gdkdnd-x11.c missing Xutil.h
Last modified: 2010-05-03 06:23:18 UTC
gdk/x11/gdkdnd-x11.c needs #include <X11/Xutil.h> after the include of Xlib.h (just like gdkwindow-x11.c already has!) otherwise, inclusion of shape.h triggers an unknown type error for Region, and compile fails.
I also ran into this exact same issue on x86_64-sun-solaris2.10, and Philip's suggested fix resolved the issue for me.
Created attachment 158215 [details] [review] Add Xutil.h Trivial patch
Comment on attachment 158215 [details] [review] Add Xutil.h commit 791962e06d0511c5e9435acb569a60b34fc279cf
This problem has been fixed in the development version. The fix will be available in the next major software release. Thank you for your bug report.
Committed also in the stable 2.20 branch in commit e6df42a9d7188af0c0b4b0f5973b2bd296ddd5ed
*** Bug 610966 has been marked as a duplicate of this bug. ***