gdk/x11/gdkdnd-x11.c
@@ -25,7 +25,9 @@
  */
 
 #include "config.h"
+
 #include <X11/Xlib.h>
+#include <X11/Xutil.h>
 #include <X11/Xatom.h>
 #include <X11/extensions/shape.h>
 
